commit almost final

--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.2.9
-#Tue Apr 02 22:00:53 EEST 2013
+#Sat May 04 14:12:21 EEST 2013
 version=2.2.9
-modified=no
+modified=yes
