--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,17 +29,35 @@ dist.jar=${dist.dir}/app.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.deploy.jar=C:\\Program Files\\Java\\jre7\\lib\\deploy.jar
+file.reference.dom4j-1.6.1.jar=poi-3.9/ooxml-lib/dom4j-1.6.1.jar
 file.reference.hsqldb.jar=D:\\Study\\VK\\hsqldb.jar
+file.reference.javaws.jar=C:\\Program Files\\Java\\jre7\\lib\\javaws.jar
+file.reference.jfxrt.jar=C:\\Program Files\\Java\\jre7\\lib\\jfxrt.jar
+file.reference.plugin.jar=C:\\Program Files\\Java\\jre7\\lib\\plugin.jar
+file.reference.poi-3.9-20121203.jar=poi-3.9/poi-3.9-20121203.jar
+file.reference.poi-ooxml-3.9-20121203.jar=poi-3.9/poi-ooxml-3.9-20121203.jar
+file.reference.poi-ooxml-schemas-3.9-20121203.jar=poi-3.9/poi-ooxml-schemas-3.9-20121203.jar
+file.reference.poi-scratchpad-3.9-20121203.jar=poi-3.9/poi-scratchpad-3.9-20121203.jar
+file.reference.stax-api-1.0.1.jar=poi-3.9/ooxml-lib/stax-api-1.0.1.jar
+file.reference.xmlbeans-2.3.0.jar=poi-3.9/ooxml-lib/xmlbeans-2.3.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.runtime}/lib/jfxrt.jar:\
-    ${javafx.runtime}/lib/deploy.jar:\
-    ${javafx.runtime}/lib/javaws.jar:\
-    ${javafx.runtime}/lib/plugin.jar:\
-    ${file.reference.hsqldb.jar}
+    ${file.reference.jfxrt.jar}:\
+    ${file.reference.deploy.jar}:\
+    ${file.reference.javaws.jar}:\
+    ${file.reference.plugin.jar}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.poi-3.9-20121203.jar}:\
+    ${file.reference.poi-ooxml-3.9-20121203.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.9-20121203.jar}:\
+    ${file.reference.poi-scratchpad-3.9-20121203.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.xmlbeans-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -95,18 +113,18 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
-javafx.runtime=${platforms.JDK1.7.javafx.runtime.home}
-javafx.sdk=${platforms.JDK1.7.javafx.sdk.home}
+javafx.runtime=${platforms.__________JavaFX_____________.javafx.runtime.home}
+javafx.sdk=${platforms.__________JavaFX_____________.javafx.sdk.home}
 javafx.signing.enabled=false
 javafx.signing.type=notsigned
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
-main.class=com.javafx.main.Main
+main.class=app.App
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK1.7
+platform.active=__________JavaFX_____________
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}
